--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "convert": "^5.3.0",
     "ldrs": "^1.0.2",
     "serve": "^14.2.3",
